fixing sub menu z-index where it sat below menu items that flow below it. The sub menu should be above any other items when hovered.

--- a/style.css
+++ b/style.css
@@ -870,7 +870,8 @@ body {
     display: none;
     margin-bottom: 0;
     padding-left: 0;
-    width: 100%; }
+    width: 100%;
+    z-index: 5; }
     .flexnav li ul li {
       font-size: 100%;
       position: relative;
